# game_sdk_demo

./: CMakeLists.txt  game_interface.md  readme.md
C#_Demo/: readme.md
C#_Demo/DanMuClock/: Assembly-CSharp.csproj  DanMuClock.sln
C#_Demo/DanMuClock/Assets/: Clock.cs  MediaPiplelineControllerSDK.cs
C#_Demo/DanMuClock/Assets/Scenes/: SampleScene.unity
C#_Demo/DanMuClock/ProjectSettings/: ProjectSettings.asset
C#_Demo/DanMuClock/UserSettings/Layouts/: default-2022.dwlt
C#_Wrapper/: InteropTypes.cs  MediaPiplelineControllerSDK.cs
GameDemo/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  version.h
base/: CMakeLists.txt  DxTextureAdapter.cpp  DxTextureAdapter.h  EnvUtil.cpp  EnvUtil.h  PixelFormatDefs.h  STLUtil.h  scoped_refptr.h  string_utils.cc  string_utils.h
